[package]
name = "timestamps"
version = "0.0.1"
edition = "2018"

[dependencies]
akri-shared = { git = "https://github.com/deislabs/akri", branch = "main", member = "shared" }
chrono = "0.4.19"
k8s-openapi = { version = "0.6.0", features = ["v1_16"] }
kube = { version = "0.23.0", features = ["openapi"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"